index3.html 생성했지롱

--- a/src/main/resources/templates/index3.html
+++ b/src/main/resources/templates/index3.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>index3.html</title>
 </head>
 <body>
-
+	<h1>Git 연습333</h1>
 </body>
 </html>
